Fixed iOS: Column data moving out of field.

--- a/MiraiConsultMVC/Views/admin/_Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/_Report.cshtml
@@ -15,13 +15,13 @@
         <td style='word-wrap: break-word'>
             @repObj.location
         </td>
-        <td>
+        <td style='word-wrap: break-word'>
             @repObj.appointmentbooked
         </td>
-        <td>
-           @repObj.appointmentclicked
+        <td style='word-wrap: break-word'>
+            @repObj.appointmentclicked
         </td>
-        <td>
+        <td style='word-wrap: break-word'>
             @repObj.avgresponsetime
         </td>
     </tr>
