--- a/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
+++ b/MiraiConsultMVC/Views/User/ForgotPassword.cshtml
@@ -29,7 +29,7 @@
                     }
                 </div>
             </div>
-            @using (Html.BeginForm("forgotpassword", "User", new { autocomplete = "off" }))
+            @using (Html.BeginForm("forgotpassword", "User"))
             {
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true)
@@ -48,7 +48,7 @@
                                 <label class="required">Email ID:</label>
                             </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
-                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border contact_margin input-block-display", maxlength = "50", placeholder = "Email ID" })<br />
+                                @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border contact_margin input-block-display", maxlength = "50", placeholder = "Email ID", @autocomplete = "off" })<br />
                                 @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
