--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -15,7 +15,7 @@
 <script src="../Content/chosen/chosen.jquery.js"></script>
 @Scripts.Render("~/bundles/jqueryval")
 @*<a href="~/Content/less/datepicker.less"></a>*@
-@using (Html.BeginForm(Html.BeginForm("DoctorSignUp", "User", FormMethod.Post, new { @encType = "multipart/form-data", autocomplete = "off" })))
+@using (Html.BeginForm(Html.BeginForm("DoctorSignUp", "User", FormMethod.Post, new { @encType = "multipart/form-data"})))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -60,7 +60,7 @@
                                                 <label class="required cust-font-style">First Name:</label>
                                             </div>
                                             <div class="span8  ">
-                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "50", placeholder = "First Name" })<br />
+                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "50", placeholder = "First Name", @autocomplete="off" })<br />
                                                 @Html.ValidationMessageFor(m => m.FirstName, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -69,7 +69,7 @@
                                                 <label class="required cust-font-style">Last Name:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.LastName, new { @class = "cust-no-border cust-gray input-block-level contact_margin", maxlength = "50", placeholder = "Last Name" })<br />
+                                                @Html.TextBoxFor(m => m.LastName, new { @class = "cust-no-border cust-gray input-block-level contact_margin", maxlength = "50", placeholder = "Last Name", @autocomplete = "off" })<br />
                                                 @Html.ValidationMessageFor(m => m.LastName, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -84,7 +84,7 @@
                                             <div class="span8">
                                                 <div class="input-append date" id="dob" data-date-format="dd/mm/yyyy" data-date-start-view="decade"
                                                      data-date-enddate="new Date()" style="width: 100%;">
-                                                    @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve cust-lightgreen cust-gray contact_margin", placeholder = "Date Of Birth", @Value = Model.DateOfBirth == null ? "" : Convert.ToDateTime(Model.DateOfBirth).ToString("dd/MM/yyyy"), @style = " width:85%", @id = "txtDob" })
+                                                    @Html.TextBoxFor(m => m.DateOfBirth, new { @class = "input-without-right-curve cust-lightgreen cust-gray contact_margin", placeholder = "Date Of Birth", @Value = Model.DateOfBirth == null ? "" : Convert.ToDateTime(Model.DateOfBirth).ToString("dd/MM/yyyy"), @style = " width:85%", @id = "txtDob", @autocomplete = "off" })
                                                     <span class="add-on add-on-green  icon-with-right-curve date-box-margin"></span>
                                                 </div>
                                             </div>
@@ -111,7 +111,7 @@
                                                 <label class="cust-font-style">Mobile No:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "cust-no-border cust-gray input-block-level contact_margin", @maxlength = "10", @placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br />
+                                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "cust-no-border cust-gray input-block-level contact_margin", @maxlength = "10", @placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);", @autocomplete = "off" })<br />
                                                 @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
@@ -160,7 +160,7 @@
                                                 <label class="cust-font-style">Registration No:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.RegistrationNumber, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "15", placeholder = "Registration Number" })
+                                                @Html.TextBoxFor(m => m.RegistrationNumber, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "15", placeholder = "Registration Number", @autocomplete = "off" })
                                             </div>
                                         </div>
                                     </div>
@@ -213,7 +213,7 @@
                                                 <label class="cust-font-style required ">Email:</label>
                                             </div>
                                             <div class="span8">
-                                                @Html.TextBoxFor(m => m.Email, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "50", placeholder = "Email" })<br />
+                                                @Html.TextBoxFor(m => m.Email, new { @class = "cust-no-border cust-lightgreen input-block-level contact_margin", maxlength = "50", placeholder = "Email", @autocomplete = "off" })<br />
                                                 @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                                             </div>
                                         </div>
