--- a/MiraiConsultMVC/Views/admin/_Report.cshtml
+++ b/MiraiConsultMVC/Views/admin/_Report.cshtml
@@ -6,22 +6,22 @@
     {
    
     <tr>
-        <td style='word-wrap: break-word'>
+        <td class="column-word-break">
             @repObj.name
         </td>
-        <td style='word-wrap: break-word'>
+        <td class="column-word-break">
             @repObj.city
         </td>
-        <td style='word-wrap: break-word'>
+        <td class="column-word-break">
             @repObj.location
         </td>
-        <td>
+        <td class="column-word-break">
             @repObj.appointmentbooked
         </td>
-        <td>
-           @repObj.appointmentclicked
+        <td class="column-word-break">
+            @repObj.appointmentclicked
         </td>
-        <td>
+        <td class="column-word-break">
             @repObj.avgresponsetime
         </td>
     </tr>
