--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -268,7 +268,7 @@
                             <div class="row-fluid cust-padding-bw-row text-center">
                                 <div class="span12">
                                     <input type="submit" name="btnCreatePatientAccount" value="Create Account" onclick="" id="btnCreatePatientAccount" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" />
-                                    <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="window.location.href = '/patient-signup'" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" />
+                                    <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="resetAction();" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" />
                                 </div>
                             </div>
                         </div>
@@ -309,6 +309,11 @@
         if (cntrl.val().length > 0)
             isValidDateofBirth(cntrl);
     })
+
+    function resetAction() {
+        $("span.validation-summary-errors.field-validation-error").html("");
+        window.location.href = '/patient-signup';
+    }
     $(".input-block-level").keyup(function () {
         $("form").valid();
     });
