--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -218,7 +218,7 @@
                 <div class="row-fluid">
                     <div class="span12 btn-margin-top profile-button" style="text-align: center">
                         <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnSubmit" value="Save" onclick="if (!ValidateAllControl()) return false;" />
-                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="window.location.href = '/doctor-profile'" />
+                        <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" value="Reset" onclick="resetAction();" />
                     </div>
                 </div>
                 <div class="row-fluid">
@@ -623,6 +623,12 @@
             return false;
         }
     });
+
+    function resetAction() {
+        $("span.validation-summary-errors.field-validation-error").html("");
+        window.location.href = '/doctor-profile';
+    }
+
     $("#Image").change(function () {
         var fileType = $(this).val();
         FileUploadValidation(fileType);
