--- a/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
+++ b/MiraiConsultMVC/Views/Patients/InviteFriend.cshtml
@@ -64,7 +64,7 @@
                 <div class="span12">
                     <div class="span8 pull-right btn-padding-left">
                         <input type="submit" class="btn thanx tab_margin gray-border" value="Submit" onclick="if (!Page_ClientValidate()){ this.disabled = false;} else{ this.disabled = true;}">
-                        <input type="reset" class="btn tab_margin cancel gray-border" onclick="window.location.href = '/invite-friends'" value="Reset">                       
+                        <input type="reset" class="btn tab_margin cancel gray-border" value="Reset" onclick='resetAction();'>                       
                     </div>
                 </div>
             </div>
@@ -119,7 +119,10 @@
     $(".input-block-level").keyup(function () {
         //Page_ClientValidate();
     });
-
+    function resetAction() {
+        $("span.validation-summary-errors.field-validation-error").html("");
+        window.location.href = '/invite-friends';
+    }
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
