--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -231,7 +231,7 @@
                     <div class="row-fluid cust-padding-bw-row">
                         <div class="span12 btn-padding-left btn-margin-top profile-button" style="text-align:center">
                             <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnUpdatePatientAccount" value="Update" onclick="return (validation());" />
-                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" onclick="window.location.href = '/patient-profile'" value="Reset" onclick="ClearMessage()" />
+                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" onclick="resetAction();" value="Reset" onclick="ClearMessage()" />
                         </div>
                     </div>
                 </div>
@@ -255,6 +255,10 @@
         if (cntrl.val().length > 0)
             isValidDateofBirth(cntrl);
     })
+    function resetAction() {
+        $("span.validation-summary-errors.field-validation-error").html("");
+        window.location.href = '/patient-profile';
+    }
     function getStatebyCountry(countryId) {
         if (countryId.length == 0)
             countryId = 0;
