--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -44,15 +44,20 @@
                         <div id="controlcontainer" class="wrapper-bordered">
                             <div class="row-fluid">
                                 @if (ViewBag.message != null && ViewBag.message == "This email is not available. Please select a different email.")
-                                {
-                                    <div class="span12 alert alert-error" id="errorMessageDiv">
-                                        <label id="lblErrorMessage" class="error_message_color msg_font">@ViewBag.message</label>
-                                    </div>
+                                {   
+                                     <div class="wrapper-bordered">
+                                        <div class="row-fluid">
+                                            <div class="span12 alert alert-error" id="errorMessageDiv">
+                                                <label id="lblErrorMessage" class="error_message_color msg_font">@ViewBag.message</label>
+                                            </div>
+                                        </div>
+                                     </div>
                                 }
-                                <div class="span12 cust-header-name-text">
-                                    <h5 class="title cust-header-name-text cust-space-below">Personal Details</h5>
+                                <div class="row-fluid">
+                                    <div class="span12 cust-header-name-text">
+                                        <h5 class="title cust-header-name-text cust-space-below">Personal Details</h5>
+                                    </div>
                                 </div>
-
                                 <div class="row-fluid cust-padding-bw-row">
                                     <div class="span12">
                                         <div class=" span6">
