"Sele" is not showing in speciality after click on reset button

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -626,6 +626,7 @@
 
     function resetAction() {
         $("span.validation-summary-errors.field-validation-error").html("");
+        $("ul.chzn-choices").html("");
         window.location.href = '/doctor-profile';
     }
 
