--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -11,6 +11,9 @@ input[type="file"] {
     max-width: 236px;
 }
 
+.profile-max-width{
+    max-width: 270px;
+}
 .min-width {
     min-width: 200px;
 }
@@ -3645,8 +3648,8 @@ table.cust-table {
     }
 
     .main-outter-padding {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: auto;
+        padding-right: auto;
         margin-top:6%;
     }
 
@@ -4032,6 +4035,9 @@ table.cust-table {
         float:none;
         padding-top:0;
         text-align:left;
+    }
+    .btn-margin-left{
+        margin-left:-5%;
     }
 }
 .menu-margin-top {
