--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -44,7 +44,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style required ">First Name:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level max-width min-width contact_margin", placeholder = "First Name" })<br />
+                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "cust-no-border cust-lightgreen input-block-level profile-max-width min-width contact_margin", placeholder = "First Name" })<br />
                                             @Html.ValidationMessageFor(m => m.FirstName, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -53,7 +53,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label required  cust-font-style ">Last Name:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.LastName, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width contact_margin", placeholder = "Last Name" })<br/>
+                                            @Html.TextBoxFor(m => m.LastName, new { @class = "input-block-level cust-lightgreen cust-gray profile-max-width min-width contact_margin", placeholder = "Last Name" })<br/>
                                             @Html.ValidationMessageFor(m => m.LastName, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -64,7 +64,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label required cust-font-style ">Email:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width contact_margin", placeholder = "Email" })<br/>
+                                            @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level cust-lightgreen cust-gray profile-max-width min-width contact_margin", placeholder = "Email" })<br/>
                                             @Html.ValidationMessageFor(m => m.Email, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -73,7 +73,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Mobile No:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen max-width min-width contact_margin", placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br/>
+                                            @Html.TextBoxFor(m => m.MobileNo, new { @class = "input-block-level cust-lightgreen profile-max-width min-width contact_margin", placeholder = "Mobile No", @onkeypress = "return isNumber(event,10,this);" })<br/>
                                             @Html.ValidationMessageFor(m => m.MobileNo, string.Empty, new { @class = "validation-summary-errors" })
                                         </div>
                                     </div>
@@ -192,7 +192,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Address:</label>
                                         <div class="controls">
-                                            @Html.TextAreaFor(m => m.Address, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width contact_margin", placeholder = "Address", rows = "2", columns = "50" })
+                                            @Html.TextAreaFor(m => m.Address, new { @class = "input-block-level cust-lightgreen cust-gray profile-max-width min-width contact_margin", placeholder = "Address", rows = "2", columns = "50" })
                                         </div>
                                     </div>
                                 </div>
@@ -200,7 +200,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Pin Code:</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width contact_margin", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), @onkeypress = "return isNumber(event,6,this);", id = "txtPinCode" })<br/>
+                                            @Html.TextBoxFor(m => m.Pincode, new { @class = "input-block-level cust-lightgreen cust-lightgreen profile-max-width min-width contact_margin", placeholder = "Pin Code", @Value = (Model.Pincode == 0) ? "" : Model.Pincode.ToString(), @onkeypress = "return isNumber(event,6,this);", id = "txtPinCode" })<br/>
                                             @Html.ValidationMessageFor(m => m.Pincode, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -211,7 +211,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Height (in cm):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen max-width min-width contact_margin", placeholder = "Height in cm", @Value = (Model.Height == 0) ? "" : Model.Height.ToString(), @onkeypress = "return isNumber(event,5,this);", id = "txtHeight" })<br/>
+                                            @Html.TextBoxFor(m => m.Height, new { @class = "input-block-level cust-lightgreen cust-lightgreen profile-max-width min-width contact_margin", placeholder = "Height in cm", @Value = (Model.Height == 0) ? "" : Model.Height.ToString(), @onkeypress = "return isNumber(event,5,this);", id = "txtHeight" })<br/>
                                             @Html.ValidationMessageFor(m => m.Height, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -220,7 +220,7 @@
                                     <div class="control-group controlgroup_margin">
                                         <label class="control-label cust-font-style">Weight (in kg):</label>
                                         <div class="controls">
-                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray max-width min-width contact_margin", placeholder = "Weight in kg", @Value = (Model.Weight == 0) ? "" : Model.Weight.ToString(), @onkeypress = "return isDecimalNumber(event,3,this);", id = "txtWeight" })<br/>
+                                            @Html.TextBoxFor(m => m.Weight, new { @class = "input-block-level cust-lightgreen cust-gray profile-max-width min-width contact_margin", placeholder = "Weight in kg", @Value = (Model.Weight == 0) ? "" : Model.Weight.ToString(), @onkeypress = "return isDecimalNumber(event,3,this);", id = "txtWeight" })<br/>
                                             @Html.ValidationMessageFor(m => m.Weight, string.Empty, new { @class = "validation-summary-errors" })                                            
                                         </div>
                                     </div>
@@ -230,8 +230,8 @@
                     </div>
                     <div class="row-fluid cust-padding-bw-row">
                         <div class="span12 btn-padding-left btn-margin-top profile-button" style="text-align:center">
-                            <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style" id="btnUpdatePatientAccount" value="Update" onclick="return (validation());" />
-                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style" onclick="resetAction();" value="Reset" onclick="ClearMessage()" />
+                            <input type="submit" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style button-float btn-margin-left" id="btnUpdatePatientAccount" value="Update" onclick="return (validation());" />
+                            <input type="reset" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style button-float" onclick="resetAction();" value="Reset" onclick="ClearMessage()" />
                         </div>
                     </div>
                 </div>
