--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -2644,7 +2644,7 @@ table.cust-table {
         margin-top: -3% !important;
     }
     .main-outter-padding{
-        padding-left: 40px;
+        padding-left: 56px;
         padding-right: 40px;
         margin-top:5%;
     }
@@ -3289,8 +3289,8 @@ table.cust-table {
 
     /* Landscape phones and down */
 @media only screen and (max-width: 480px) {
-    .profile-max-width{
-         max-width: 270px;
+    .date_box_width{
+        width:83% !important;
     }
     .answer-title {
         padding-bottom: 5px;
@@ -3578,7 +3578,7 @@ table.cust-table {
         padding-left: 70px !important;
     }
     .date_box_width_patient{
-        width: 58% !important;
+        width: 100% !important;
     }
 
     .gendermargin {
