Fixed css issue

--- a/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientProfile.cshtml
@@ -12,7 +12,7 @@
     @Html.ValidationSummary(true)
     {
         <div class="row-fluid patientprofile_div">
-            <div class="span12 main-outter-padding outer-margin-left">
+            <div class="span12 main-outter-padding">
                 <div class="row-fluid">
                     <div class="span12 cust-header-name-text">
                         <h5 class="title cust-header-main-text-title"> My Profile</h5>
