--- a/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/DoctorSignUp.cshtml
@@ -251,8 +251,8 @@
                                 </div>
                                 <div class="row-fluid cust-padding-bw-row text-center">
                                     <div class="span12">
-                                        <input type="submit" name="btnCreateDoctorAccount" value="Create Account" id="btnCreateDoctorAccount" onclick="" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style">
-                                        <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="resetAction();" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style">
+                                        <input type="submit" name="btnCreateDoctorAccount" value="Create Account" id="btnCreateDoctorAccount" onclick="" class="btn cust-button-radius cust-skyblue cust-uppercase cust-space-around cust-medium-button cust-font-style button-float signupbtn-margin-left">
+                                        <input type="reset" name="btnClear" value="Clear" id="btnClear" onclick="resetAction();" class="btn cust-button-radius cust-uppercase cust-red cust-space-around cust-medium-button cust-font-style btn-float-right signupclearbtn-margin-left">
                                     </div>
                                 </div>
                             </div>
